platform/nui/manifests/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nui
  namespace: nats
spec:
  parentRefs:
    - name: protected
      namespace: traefik
  hostnames:
    - nui.dev.kfirs.com
  rules:
    - filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: admins
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: strip-cookies
      backendRefs:
        - name: nui
          port: 31311
